@@ -1,3 +1,12 @@
+SRM (0.10.0-1)
+
+  # API Additions
+
+  * srmConnectorGetSerial: Retrieves the serial number of a connected display.
+
+-- Eduardo Hopperdietzel <ehopperdietzel@gmail.com>  Mon, 11 Nov 2024 10:47:07 -0300
+
+
 SRM (0.9.0-1)
 
   # API Additions
